# Arke

./: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
data/docs/: silla.epub
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
src/: app.py  main.py
src/agents/: middleware.py  tools.py
src/core/: cache.py  config.py  ingestion.py  pipeline.py  prompts.py  storage.py
src/core/api/: chat.py
src/utils/: __init__.py  console.py  logging.py
tests/: test_api.py  test_ingestion.py  test_pipeline.py  test_storage.py
tests/mock_docs/: mock1.txt  mock2.txt  mock3.txt
